--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ section {
     right: 0;
     z-index: 99;
     border-bottom: var(--border);
+    background-color: var(--bg);
 }
 
 .header section {
@@ -61,8 +62,65 @@ section {
     margin: 1rem;
     cursor: pointer;
 }
+
 .icons img:hover {
     width: 40px;
     height: 40px;
 }
-/* 26:16 minutos */
+
+.btn {
+    background: var(--main-color);
+    color: #fff;
+    padding: 1rem 3rem;
+    cursor: pointer;
+    font-size: 1.7rem;
+    margin-top: 1rem;
+    display: inline-block;
+}
+
+.home-container {
+    background: url("assets/home-img.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+.home-container section {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    
+}
+
+.content { 
+    max-width: 60rem;
+}
+
+.content h3 {
+    color: #fff;
+    font-size: 6rem;
+}
+
+.content p {
+    color: #fff;
+    font-size: 2rem;
+    font-weight: 100;
+    line-height: 1.8rem;
+    padding: 1rem 0;
+}
+
+.tittle {
+    font-size: 5rem;
+    color: var(--main-color);
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.tittle span {
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.about {
+
+}
+/*43:00 Min*/
