--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --main-color: #d3ad7f;
     --black: #13131a;
     --bg: #010103;
-    --border: 0.1rem solid rgba(255,255,255,0.3);
+    --border: 0.1rem solid rgba(255, 255, 255, 0.3);
     font-size: 10px;
 }
 
@@ -78,6 +78,10 @@ section {
     display: inline-block;
 }
 
+.btn:hover {
+    letter-spacing: 0.1rem;
+}
+
 .home-container {
     background: url("assets/home-img.jpg");
     background-position: center;
@@ -88,10 +92,10 @@ section {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    
+
 }
 
-.content { 
+.content {
     max-width: 60rem;
 }
 
@@ -109,10 +113,11 @@ section {
 }
 
 .tittle {
-    font-size: 5rem;
+    font-size: 4rem;
     color: var(--main-color);
     text-align: center;
     text-transform: uppercase;
+    margin-bottom: 4rem;
 }
 
 .tittle span {
@@ -120,7 +125,68 @@ section {
     text-transform: uppercase;
 }
 
-.about {
-
+.about .row {
+    display: flex;
+    align-items: center;
+    background-color: var(--black);
+    gap: 1.5rem;
 }
-/*43:00 Min*/
+
+.about .row .content {
+    padding: 2rem;
+}
+
+about .row .content h3 {
+    font-size: 3rem;
+    color: #fff;
+}
+
+about .row .content p {
+    font-size: 1.6rem;
+    color: #fff;
+    padding: 1rem 0;
+    line-height: 1.8rem;
+}
+
+.menu .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;
+}
+
+.menu .box-container .box {
+    text-align: center;
+    border: var(--border);
+    padding: 5rem;
+    cursor: pointer;
+}
+
+.menu .box-container .box img {
+    height: 10rem;
+}
+
+.menu .box-container .box h3 {
+    color: #fff;
+    font-size: 2rem;
+    padding: 1rem 0;
+}
+
+.menu .box-container .box .price {
+    color: #fff;
+    font-size: 2.5rem;
+    padding: 0.5rem 0;
+}
+
+.menu .box-container .box span {
+    font-size: 1.5rem;
+    text-decoration: line-through;
+    font-weight: lighter;
+}
+
+.menu .box-container .box:hover {
+    background-color: #fff;
+}
+
+.menu .box-container .box:hover>* {
+    color: var(--black);
+}
